# GarudaChip

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.streamlit/: config.toml
backend/garuda_api/: __init__.py  db.py  harden.py  headless_st.py  ip_store.py  ips.py  jobs.py  main.py  runner.py  sim.py  vcd.py
data/chip_studio/floorplans/: fp_988b20ff56.json
data/ip_library/aes/: ip.json
data/ip_library/blake2s/: ip.json
data/ip_library/bus_arbiter_implementation/: ip.json
data/ip_library/bus_arbiter_input_output/: ip.json
data/ip_library/bus_axi_bram_reader/: axi_bram_reader.gds  ip.json
data/ip_library/bus_axi_bram_reader_parameters_slave/: axi_bram_reader.gds  ip.json
data/ip_library/bus_axi_input_multiplexer_control/: axis_mux_4.gds  ip.json
data/ip_library/bus_axi_lite_register_control/: axilite2regctl.gds  ip.json
data/ip_library/bus_axi_register_slice_forwarding/: ip.json
data/ip_library/bus_axi_stream_broadcast/: axis_broadcast.gds  ip.json
data/ip_library/bus_axi_stream_counter_state/: axi_stream_counter.gds  ip.json
data/ip_library/bus_clock_generator_axi/: ip.json
data/ip_library/bus_wishbone_bus_interconnect_address/: ip.json
data/ip_library/bus_wishbone_bus_multiplexing/: ip.json
data/ip_library/bus_wishbone_registers/: ip.json
data/verilog_datasets/: agent_memory.json
docker/searxng/: settings.yml
docs/: garudachip_paper.tex
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Artifacts.tsx  Block.tsx  ChipStudio.tsx  IPLibrary.tsx  Knowledge.tsx  Simulation.tsx  Waveform.tsx  api.ts  index.css  main.tsx  types.ts
notebooks/: knowledge_store_explorer.ipynb  lint_and_harden.ipynb
scripts/: build_ip_library.py  clone_autoresearch.py  clone_ip_sources.py  gen_memory_ips.py  ingest_gds.py  install.sh  make_design_pdf.py  migrate_faiss_to_pg.py  mine_faiss_ips.py  poll_run.py  prune_ips.py  run.sh  seed_fix_lessons.py  validate_run.py  watch_run.py
src/garuda_chip/: __init__.py  app.py  deep_agent.py  llm.py  memory_store.py  verilog_check.py
(+419 files in other folders)
